src/test/deca/context/valid/print_assign_cont_01.deca
// Description:
//    Programme testant le comportement de print avec un assign.
//
// Resultats:
//      2
//
// Historique:
//    cree le 04/01/2023

{
        int x;
        print(x = 2);

}